[package]
name = "traders_tda_broker"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
traders = { git = "https://github.com/maccam912/traders", branch = "main" }
urlencoding = "1.3"
regex = "1.5"
serde = { version = "1", features = ["derive"]}
reqwest = { version = "0.11", features = ["json"]}
tokio = { version = "1.7", features = ["full"]}
chrono = "0.4"